--- a/src/Info.plist
+++ b/src/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIPrerenderedIcon</key>
+	<string>0</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -9,7 +11,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>IconWithGradient.png</string>
+	<string>IconWithoutShine.png</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.highorderbit.buildwatch</string>
 	<key>CFBundleInfoDictionaryVersion</key>
