--- a/src/ServerNames.plist
+++ b/src/ServerNames.plist
@@ -1,14 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>http://builder/my-server/</key>
-	<string>My Builds</string>
-	<key>http://apple.com/builder/</key>
-	<string>Apple Builds</string>
-	<key>http://microsoft.com/TeamSystem/default.aspx</key>
-	<string>Microsoft Builds</string>
-	<key>http://openoffice.org/builds/</key>
-	<string>OpenOffice Builds</string>
-</dict>
+<dict/>
 </plist>
