--- a/src/Servers.plist
+++ b/src/Servers.plist
@@ -1,30 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>http://openoffice.org/builds/</key>
-	<array>
-		<string>OpenOffice</string>
-		<string>KDE</string>
-		<string>GNOME</string>
-	</array>
-	<key>http://microsoft.com/TeamSystem/default.aspx</key>
-	<array>
-		<string>Windows 7</string>
-		<string>Visual Studio Team System 2007</string>
-		<string>Microsoft Office System 2009</string>
-	</array>
-	<key>http://apple.com/builder/</key>
-	<array>
-		<string>Mail</string>
-		<string>Address Book</string>
-		<string>Safari</string>
-	</array>
-	<key>http://builder/my-server/</key>
-	<array>
-		<string>Build Watch</string>
-		<string>Website</string>
-		<string>Git Website</string>
-	</array>
-</dict>
+<dict/>
 </plist>
