--- a/src/Info.plist
+++ b/src/Info.plist
@@ -28,5 +28,9 @@
 	<true/>
 	<key>NSMainNibFile</key>
 	<string>MainWindow</string>
+	<key>FeedbackAddress</key>
+	<string>bw-feedback@highorderbit.com</string>
+	<key>Website</key>
+	<string>http://www.sandbox.highorderbit.com/home</string>
 </dict>
 </plist>
