--- a/src/Info.plist
+++ b/src/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>IconWithoutShine.png</string>
+	<string>Icon.png</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.highorderbit.buildwatch</string>
 	<key>CFBundleInfoDictionaryVersion</key>
